исправила модели, теперь используется библиотека Lombok, объединила 2 теста, исправила названия. добавила поифайл